# moltctrl

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  SKILL.md  install.ps1  install.sh  moltctrl
.github/workflows/: ci.yml  release.yml  test.yml
profiles/: openclaw.yml.tmpl
src/: browser.rs  chat.rs  cli.rs  config.rs  docker.rs  health.rs  interactive.rs  lib.rs  main.rs  output.rs  port.rs  process_manager.rs  provider.rs  runtime.rs  sandbox.rs  sandbox_unix.rs  sandbox_windows.rs  state.rs  template.rs  token.rs  validate.rs
src/commands/: chat_cmd.rs  create.rs  destroy.rs  doctor.rs  lifecycle.rs  list.rs  logs.rs  mod.rs  open.rs  pair.rs  status.rs  token_cmd.rs  update.rs
tests/: integration_create.bats  integration_lifecycle.bats  integration_port.bats  unit_provider.bats  unit_template.bats  unit_utils.bats
tests/common/: mod.rs
tests/integration/: create_destroy.rs  doctor.rs  lifecycle.rs  list_status.rs  mod.rs  pair.rs  port_allocation.rs  token.rs  update.rs  validation.rs
tests/test_helper/: common.bash
tests/test_helper/mocks/: docker
