[package]
name = "moltctrl"
version = "0.3.6"
edition = "2021"
description = "Security-hardened OpenClaw AI agent instance manager"
license = "MIT"
repository = "https://github.com/takschdube/moltctrl"
readme = "README.md"
keywords = ["ai", "agent", "openclaw", "docker", "sandbox"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "process", "io-std", "io-util", "net"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
dialoguer = "0.11"
indicatif = "0.17"
owo-colors = "4"
dirs = "6"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
regex-lite = "0.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs", "process", "resource", "signal"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_JobObjects", "Win32_System_Threading", "Win32_Security"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serial_test = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
